spacing responsiveness fix
fix for the bottom half of the page

--- a/SDA.css
+++ b/SDA.css
@@ -381,6 +381,8 @@ body > h1 {
 .pttwotwo {
   display: flex;
   justify-content: center;
+  width: 100%;
+  margin: 6px;
 }
 
 footer h3 {
@@ -393,10 +395,11 @@ footer h3 {
 .column {
   /* background-color: #132A13; */
   width: 32%;
-  float: left;
+ 
   border: #2176FF 5px;
   padding: 3px;
   margin: 2px;
+  overflow: scroll;
   
 }
 
@@ -412,7 +415,7 @@ footer h3 {
   align-items: center;
    text-align: center;
   width: 100%;
-  height: 20rem
+  
 }
 
 
@@ -441,7 +444,9 @@ width: 77%;
   width: 100%;
   position:relative;
   margin-bottom: 50px;
-  ;
+  display: flex;
+  justify-content:space-between;
+  
 }
 
 /* .middlesection::after {
@@ -454,24 +459,25 @@ width: 77%;
 
 .middlesection main {
   /* background-color: #132A13; */
-  width: 55%;
+  width: 65%;
   align-self: center;
-  justify-content: center;
+  
   border: #2176FF 5px;
   padding: 3px;
   margin: 2px;
   margin: 0;
   text-align: center;
-  position: relative;
-  left: 18%;
+  /* position: absolute;
+  left: 18%; */
 
   padding: 4px;
 }
 
-.middlesection > main > img {
+.middlesection > main  img {
 
   max-width: 100%;
   border: #2176FF solid 3px;
+  justify-self: center;
 
 }
 
@@ -479,12 +485,10 @@ width: 77%;
   /* background-color: #0D2C54; */
   width: 25%;
   float: right;
-  height: 100%;
-  position: absolute;
-  top: 0px;
-  right: 0;
+  
+  
   padding: 4px;
-  margin-right: 10px;
+  margin-right: 20px;
   text-align: left;
   display: flex;
   flex-wrap: wrap;
@@ -916,4 +920,3 @@ top: 276px;
 width: 50%;
 }
 
-footer
